# zitadel-django-next-example

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/api/: authentication.py  settings.py  urls.py  views.py
frontend/pages/: index.tsx
frontend/pages/api/auth/: [...nextauth].ts
frontend/pages/profile/: index.tsx
frontend/styles/: Home.module.css
